--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
   "dependencies": {
     "@nuxtjs/pwa": "^3.0.2",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.5"
+    "feather-icons": "^4.28.0",
+    "nuxt": "^2.14.5",
+    "vue-feather-icons": "^5.1.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/eslint-module": "^2.0.0",
+    "@nuxtjs/style-resources": "^1.0.0",
     "@nuxtjs/tailwindcss": "^3.0.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.8.1",
     "eslint-plugin-nuxt": "^1.0.0",
-    "nuxt-purgecss": "^1.0.0"
+    "node-sass": "^4.14.1",
+    "nuxt-purgecss": "^1.0.0",
+    "sass-loader": "^10.0.2"
   }
 }
