--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/pwa": "^3.0.2",
     "core-js": "^3.6.5",
     "feather-icons": "^4.28.0",
+    "mapbox-gl": "^1.12.0",
     "nuxt": "^2.14.5",
     "vue-feather-icons": "^5.1.0"
   },
