--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   },
   "dependencies": {
     "@nuxtjs/pwa": "^3.0.2",
+    "@tailwindcss/typography": "^0.2.0",
     "core-js": "^3.6.5",
+    "dompurify": "^2.1.1",
     "feather-icons": "^4.28.0",
     "mapbox-gl": "^1.12.0",
+    "marked": "^1.2.0",
     "nuxt": "^2.14.5",
     "vue-feather-icons": "^5.1.0"
   },
