--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mapbox-gl": "^1.12.0",
     "marked": "^1.2.0",
     "nuxt": "^2.14.5",
-    "vue-feather-icons": "^5.1.0"
+    "vue-feather-icons": "^5.1.0",
+    "vue-timeago": "^5.1.2"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
