--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/pwa": "^3.0.2",
     "@tailwindcss/typography": "^0.2.0",
+    "autoprefixer": "^10.0.2",
     "axios": "^0.21.0",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
@@ -23,6 +24,8 @@
     "mapbox-gl": "^1.12.0",
     "marked": "^1.2.0",
     "nuxt": "^2.14.5",
+    "postcss": "^8.1.8",
+    "tailwindcss": "^2.0.1",
     "vue-feather-icons": "^5.1.0",
     "vue-timeago": "^5.1.2"
   },
